# ai-data-scientist-agent

./: .bandit  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  COMMIT_MESSAGE_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_SUCCESS.md  DOCUMENTATION_INDEX.md  Dockerfile  Makefile  PROJECT_ANALYSIS.md  README.md  README_DOCKER.md  audit.sh  deploy.sh  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
backend/: Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml  requirements-dev.txt
backend/app/: main.py
backend/app/agent/: router.py
backend/app/core/: clarify.py  config.py  job_models.py  llm.py  logs.py  models.py  schemas.py  telemetry.py
backend/app/critique/: moe.py
backend/app/eda/: eda.py
backend/app/modeling/: auto_actions.py  explainers.py  pipeline.py  transformers.py
backend/bench/: datasets.yaml  report.py  run_bench.py  thresholds.yaml
backend/data/: experiments.csv
backend/docs/: API.md  ARCHITECTURE.md  FILES.md  OPERATIONS.md  core.md  data_quality.md  eda.md  modeling.md  pipeline.md  platform.md  reporting.md
backend/tests/: conftest.py  test_api_flow.py  test_clarify_and_resume.py  test_data_quality_service.py  test_delimiter_detection.py  test_eda_basic.py  test_feature_engineering_service.py  test_largefile_chunked.py  test_model_logs_written.py  test_modeling_explain_logs.py  test_modeling_fallback.py  test_profile_gating.py  test_report_fallback_inline_assets.py  test_report_fallback_smoke.py  test_report_json_schema.py  test_router_fallback.py  test_security_dataset_path.py
(+230 files in other folders)
