[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "ai-data-scientist-agent"
version = "0.1.0"
description = "FastAPI backend for AI Data Scientist Agent"
authors = [{name = "AI Data Scientist Agent", email = "dev@example.com"}]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.24.0",
  "pandas>=2.2.0",
  "python-multipart>=0.0.9",
  "openpyxl>=3.1.2",
  "scikit-learn>=1.3.0",
  "matplotlib>=3.8.0",
  "seaborn>=0.13.0",
  "openai>=1.107,<2",
]

[project.scripts]
ai-ds-backend = "app.main:run"

[tool.hatch.metadata]
allow-direct-references = true



[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff.lint]
# Ignore E402 (module level import not at top of file) - intentional for lazy loading
# Ignore E701/E702 (multiple statements on one line) - test code style
extend-ignore = ["E402", "E701", "E702"]
